--- a/notebooks/Sagemaker_Notebook_1.3.ipynb
+++ b/notebooks/Sagemaker_Notebook_1.3.ipynb
@@ -26,13 +26,13 @@
     "\n",
     "!mkdir /home/studio-lab-user/stable-diffusion-webui/outputs\n",
     "\n",
-    "%cd /home/studio-lab-user/stable-diffusion-webui/embeddings\n",
-    "!git clone --depth 1 https://github.com/dreamscapeai/negativekit\n",
+    "# %cd /home/studio-lab-user/stable-diffusion-webui/embeddings\n",
+    "# !git clone --depth 1 https://github.com/dreamscapeai/negativekit\n",
     "\n",
     "%cd /home/studio-lab-user/stable-diffusion-webui/extensions\n",
-    "!git clone --depth 1 https://github.com/etherealxx/batchlinks-webui\n",
+    "# !git clone --depth 1 https://github.com/etherealxx/batchlinks-webui\n",
     "!git clone --depth 1 https://github.com/zanllp/sd-webui-infinite-image-browsing\n",
-    "!git clone --depth 1 https://github.com/dreamscapeai/CN-v11400\n",
+    "# !git clone --depth 1 https://github.com/dreamscapeai/CN-v11400\n",
     "!git clone --depth 1 https://github.com/dreamscapeai/adetailer\n",
     "# !git clone --depth 1 https://github.com/dreamscapeai/ultimatesdupscale\n",
     "!git clone --depth 1 https://github.com/dreamscapeai/tagcomplete"
