--- a/notebooks/comfyui_colab.ipynb
+++ b/notebooks/comfyui_colab.ipynb
@@ -222,25 +222,25 @@
       },
       "outputs": [],
       "source": [
-        "import threading\n",
-        "import time\n",
-        "import socket\n",
-        "def iframe_thread(port):\n",
-        "  while True:\n",
-        "      time.sleep(0.5)\n",
-        "      sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
-        "      result = sock.connect_ex(('127.0.0.1', port))\n",
-        "      if result == 0:\n",
-        "        break\n",
-        "      sock.close()\n",
-        "  from google.colab import output\n",
-        "  output.serve_kernel_port_as_iframe(port, height=1024)\n",
-        "  print(\"to open it in a window you can open this link here:\")\n",
-        "  output.serve_kernel_port_as_window(port)\n",
+        "# import threading\n",
+        "# import time\n",
+        "# import socket\n",
+        "# def iframe_thread(port):\n",
+        "#   while True:\n",
+        "#       time.sleep(0.5)\n",
+        "#       sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+        "#       result = sock.connect_ex(('127.0.0.1', port))\n",
+        "#       if result == 0:\n",
+        "#         break\n",
+        "#       sock.close()\n",
+        "#   from google.colab import output\n",
+        "#   output.serve_kernel_port_as_iframe(port, height=1024)\n",
+        "#   print(\"to open it in a window you can open this link here:\")\n",
+        "#   output.serve_kernel_port_as_window(port)\n",
         "\n",
-        "threading.Thread(target=iframe_thread, daemon=True, args=(8188,)).start()\n",
+        "# threading.Thread(target=iframe_thread, daemon=True, args=(8188,)).start()\n",
         "\n",
-        "!python main.py --dont-print-server"
+        "# !python main.py --dont-print-server"
       ]
     }
   ],
